decided on colors and formatting; trying to fix the flickering for the projects page on the hover to expand

--- a/website/src/pages/Home.css
+++ b/website/src/pages/Home.css
@@ -146,7 +146,7 @@
     :root {
         --background-color: #333;
         --background-overlay: rgba(105, 88, 31, 0.521);
-        --text-color: #f0f0f0;
+        --text-color: #c0c0c0;
     }
 }
 
